--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "@blueprintjs/select": "^5.0.19",
     "@blueprintjs/table": "^5.0.19",
     "@popperjs/core": "^2.11.8",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-switch": "^1.2.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
