--- a/package.json
+++ b/package.json
@@ -1,45 +1,74 @@
 {
+  "name": "webdaw",
+  "version": "0.1.0",
+  "private": true,
+  "homepage": "https://ai-music.github.io/webdaw/",
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@blueprintjs/core": "^5.7.1",
-    "@blueprintjs/icons": "^5.4.1",
-    "@blueprintjs/select": "^5.0.19",
-    "@blueprintjs/table": "^5.0.19",
-    "@popperjs/core": "^2.11.8",
-    "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-popover": "^1.1.14",
-    "@radix-ui/react-slider": "^1.3.5",
-    "@radix-ui/react-switch": "^1.2.5",
+    "@blueprintjs/core": "^5.10.3",
+    "@blueprintjs/icons": "^5.9.0",
+    "@blueprintjs/select": "^5.1.5",
+    "@blueprintjs/table": "^5.1.5",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-slider": "^1.2.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.62",
-    "@types/react": "^18.2.39",
-    "@types/react-dom": "^18.2.17",
-    "@uiw/react-color-compact": "^2.0.5",
-    "data-structure-typed": "^1.50.2",
-    "directory-tree": "^3.5.1",
+    "@types/lodash": "^4.17.5",
+    "@types/node": "^16.18.98",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@uiw/react-color-compact": "^2.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "data-structure-typed": "^1.26.2",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.394.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^4.9.5",
-    "use-force-update": "^1.0.11",
     "web-vitals": "^2.1.4"
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "docs": "typedoc"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
-    "@types/lodash-es": "^4.17.12",
-    "autoprefixer": "^10.4.16",
-    "css-loader": "^6.8.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "gh-pages": "^6.1.0",
-    "postcss-loader": "^7.3.3",
-    "prettier": "^3.1.0",
-    "sass": "^1.69.5",
-    "sass-loader": "^13.3.2",
-    "style-loader": "^3.3.3",
-    "typedoc": "^0.25.4"
+    "autoprefixer": "^10.4.19",
+    "gh-pages": "^6.1.1",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.4",
+    "typedoc": "^0.25.13"
   }
 }
