--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tonejs/midi": "^2.0.28",
     "@types/jest": "^27.5.2",
     "@types/lodash": "^4.17.5",
     "@types/node": "^16.18.98",
