--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-scripts": "5.0.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "tone": "^15.1.22",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
