--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@uiw/react-color-compact": "^2.3.0",
+    "@webaudiomodules/sdk": "^0.0.12",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "data-structure-typed": "^1.26.2",
