--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "tailwindcss-animate": "^1.0.7",
     "tone": "^15.1.22",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webaudiofont": "^3.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
