--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "data-structure-typed": "^1.26.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.394.0",
+    "midi-sounds-react": "^1.2.54",
     "pdf-parse": "1.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
