--- a/package.json
+++ b/package.json
@@ -45,6 +45,14 @@
     "web-vitals": "^2.1.4",
     "webaudiofont": "^3.0.4"
   },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "docs": "typedoc"
+  },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
