--- a/package.json
+++ b/package.json
@@ -47,10 +47,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "PUBLIC_URL=/ react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build",
     "docs": "typedoc"
   },
   "devDependencies": {
@@ -58,6 +57,5 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
     "typedoc": "^0.25.13"
-  },
-  "homepage": "/"
+  }
 }
