--- a/package.json
+++ b/package.json
@@ -1,4 +1,17 @@
 {
+  "name": "prismwebdaw",
+  "version": "1.0.0",
+  "private": true,
+  "homepage": "https://webdaw.vercel.app/",
+  "scripts": {
+    "prestart": "node scripts/generate-library-json.js",
+    "start": "react-scripts start",
+    "update-library": "node scripts/generate-library-json.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "docs": "typedoc"
+  },
   "dependencies": {
     "@blueprintjs/core": "^5.10.3",
     "@blueprintjs/icons": "^5.9.0",
@@ -44,13 +57,6 @@
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "webaudiofont": "^3.0.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "docs": "typedoc"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
